# euler

./: .gitignore  README.md  euler.cabal
src/main/haskell/Euler/: Problem1.hs
src/test/haskell/: Main.hs
src/test/haskell/Euler/: Problem1Test.hs
